--- a/hello.tex
+++ b/hello.tex
@@ -76,7 +76,7 @@ Let's cover some more basics.
 \section{Spacing}
 
 \LaTeX{} generally handles inter-word spacing for you, regardless of how many
-times you hit the space bar\punckern\footnote{Or the tab key}
+times you hit the space bar.\punckern\footnote{Or the tab key}
 For example,
 \begin{leftfigure}
 \begin{lstlisting}
@@ -218,8 +218,8 @@ obeys:
 \lm Give me \\
 a brand new line!
 \end{leftfigure}
-Use this power judiciously---deciding how to break paragraphs into lines
-automatically is one of \LaTeX{}'s best skills.
+Use this power judiciously---deciding how to best break paragraphs into lines
+is one of \LaTeX{}'s greatest skills.
 
 \section{Environments}
 
