--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -118,8 +118,8 @@ emphasized text, or \introduce{label}:
 \begin{description}
 \item[Alan Turing] was a British mathematician who laid much
     of the groundwork for the field of computer science.
-    He is perhaps most remembered for his model of
-    general-purpose computing, the Turing machine.
+    He is perhaps most remembered for his model of computation,
+    the Turing machine.
 \item[Edsger Dijkstra] was a Dutch computer scientist.
     His contributions in many subdomains---such as concurrency
     and graph theory---are still in wide use today.
@@ -132,17 +132,17 @@ emphasized text, or \introduce{label}:
 \end{leftfigure}
 gives us
 \begin{leftfigure}
-\begin{minipage}{0.8\textwidth}
 \lm%
+\begin{minipage}{0.9\textwidth}
 \begin{description}[leftmargin=*]
-\item[Alan Turing] was a British mathematician who laid much
+\item[\lm Alan Turing] was a British mathematician who laid much
     of the groundwork for the field of computer science.
-    He is perhaps most remembered for his model of
-    general-purpose computing, the Turing machine.
-\item[Edsger Dijkstra] was a Dutch computer scientist.
+    He is perhaps most remembered for his model of computation,
+    the Turing machine.
+\item[\lm Edsger Dijkstra] was a Dutch computer scientist.
     His contributions in many subdomains---such as concurrency
     and graph theory---are still in wide use today.
-\item[Leslie Lamport] is an American computer scientist.
+\item[\lm Leslie Lamport] is an American computer scientist.
     He defined the concept of sequential consistency,
     which is used to safely communicate between tasks
     running in parallel on multiple processors.
@@ -152,7 +152,7 @@ gives us
 
 \section{Columns}
 
-We often split documents---or parts of them---into multiple columns.
+We often split layouts into multiple columns.
 This is especially common when printing on \textsc{a4} or \acronym{us} letter
 paper, since it allows more comfortable line widths at standard
 8--12\,pt text sizes.\punckern\footnote{You'll see different advice depending
