--- a/structure.tex
+++ b/structure.tex
@@ -112,8 +112,8 @@ Sections\footnote{By this I mean all levels, not just
 \texttt{\textbackslash section}.}
 are automatically numbered---for example,
 the title of this chapter was produced with \verb|\chapter{Document Structure}|,
-and \LaTeX{} automatically determined that it was chapter \ref{structure}.
-You can also have \LaTeX{} automatically generate a table of contents
+and \LaTeX{} figured out that it was chapter~\ref{structure}.
+You can also have \LaTeX{} build you a table of contents
 with the \verb|\tableofcontents| command.
 
 \section{What next?}
