--- a/why.tex
+++ b/why.tex
@@ -176,8 +176,8 @@ This book will:
 \begin{enumerate}
 \item Teach you the fundamentals of \LaTeX.
 \item Point you to places where you can learn more.
-\item Show you how to use modern technologies, like OpenType and microtypography,
-    to create professional-quality documents.
+\item Show you how to use modern typesetting technologies with \LaTeX,
+    like OpenType and microtypography.
 \item End promptly thereafter.
 \end{enumerate}
 \vspace{\baselineskip}
