Manually page break Ch. 1
It's less atrocious this way.

--- a/why.tex
+++ b/why.tex
@@ -75,6 +75,7 @@ as \acronym{html} and \acronym{css} describe the page you want
 browsers to draw, your markup describes the appearance of your
 document to \LaTeX.
 
+\vfill
 \begin{leftfigure}
 \begin{lstlisting}
 \LaTeX{} is an alternative to ``word processors'' like
@@ -93,7 +94,7 @@ document to \LaTeX.
 \end{lstlisting}
 \captionof{figure}{The \LaTeX{} markup for the above paragraph}
 \end{leftfigure}
-\vspace{0.5\baselineskip}
+\vfill
 
 This might seem alien to you if you've never worked with a markup system before.
 However, it comes with a few advantages:
@@ -114,6 +115,7 @@ However, it comes with a few advantages:
     If the program formats something in a way you don't like,
     how hard is it to fix?%\footnote{I spent far too much of my childhood
     %fighting with Word about how it wrapped text around images.}
+\clearpage
 
 \item You can define your own rules, then tweak them to instantly change
     everywhere they're used in your document.
@@ -173,6 +175,8 @@ or try (in vain) to be a comprehensive reference.
 After all, you're a smart, resourceful individual who knows how to use a search
 engine.
 This book will:
+\clearpage
+
 \begin{enumerate}
 \item Teach you the fundamentals of \LaTeX.
 \item Point you to places where you can learn more.
