Use draft mode to hunt down overfull
Turns out there was a good amount after the font change.
Finding it in the console output is nigh impossible,
given how much TeX spews.

--- a/back.tex
+++ b/back.tex
@@ -69,10 +69,10 @@ Monospaced items are set in Matthias Tellen's
 a typeface designed to work well on both low-resolution computer monitors
 and in high-resolution print.
 
-Captions are set in
+Captions use
 \href{http://www.fontbureau.com/NHG/}{\textsf{\small Neue Haas Grotesk}},
 a Helvetica restoration by Christian Schwartz.
-Other digitizations of the classic Swiss typeface are based on fonts made for
+Other digitizations of the ubiquitous Swiss typeface are based on fonts made for
 Linotype and phototypesetting machines,
 resulting in digital versions with all the compromises and kludges from those
 past two generations of printing technology.
