--- a/fonts.tex
+++ b/fonts.tex
@@ -158,8 +158,8 @@ used carefully, can produce amazing results.}
 
 \section{OpenType features}
 
-As mentioned above, OpenType fonts provide various features that can be turned
-on and off.
+As mentioned at the start of the chapter,
+OpenType fonts provide various features that can be turned on and off.
 In \LaTeX{}, these are controlled with optional arguments to
 \verb|\setmainfont| and friends.
 They can also be set for the current group with
@@ -273,7 +273,7 @@ You select figures with the following options:
 These traits can be mixed and matched:
 you get proportional lining figures
 with \texttt{Numbers=\{Proportional,\allowbreak Lining\}},
-and tabular oldstyle ones with \texttt{Numbers=\{Tabular,\allowbreak OldStyle\}}.
+and tabular oldstyle with \texttt{Numbers=\{Tabular,\allowbreak OldStyle\}}.
 And, like ligatures, each option has a corresponding \verb|*Off|
 variant.\punckern\footnote{This is especially useful since fonts
 select figures in different ways.
