--- a/international.tex
+++ b/international.tex
@@ -41,8 +41,8 @@ only contain ones for Latin languages.
 
 \section{The polyglossia package}
 
-If your document contains anything besides English,
-you should try the \texttt{polyglossia} package.
+When your document contains any languages besides English,
+consider using the \texttt{polyglossia} package.
 It will automatically:
 \begin{itemize}
 \item Load language-specific hyphenation patterns and other typographical
