--- a/punctuation.tex
+++ b/punctuation.tex
@@ -64,8 +64,8 @@ serve different purposes:
     \end{itemize}
     In \LaTeX{}, they are produced with the hyphen key (\,\texttt{-}\,).
 
-\item[En dashes] indicate ranges such as ``pages 4--12''\quotekern,
-    or separations like the ``US--Canada border''\quotekern.
+\item[En dashes] are for ranges such as ``pages 4--12''\quotekern,
+    or separations like the \mbox{``US--Canada} border''\quotekern.
     They are set with two adjacent hyphens (\,\texttt{--}\,).
 
 \item[Em dashes] can be used to separate clauses of a sentence.
