--- a/structure.tex
+++ b/structure.tex
@@ -60,8 +60,7 @@ so long as there are no empty lines between arguments.}
 \end{leftfigure}
 
 
-Many packages are installed as part of your \LaTeX{} distribution,
-Those you can't find locally are on the Comprehensive \TeX{}
+The packages in your \LaTeX{} distribution come from the Comprehensive \TeX{}
 Archive Network, or \acronym{ctan},\punckern\footnote{Curious readers may
 be wondering what \TeX{} is, and how it differs from \LaTeX.
 The short version is that \TeX{} is the typesetting system that \LaTeX{}
