--- a/textformatting.tex
+++ b/textformatting.tex
@@ -36,7 +36,7 @@ The styles shown above are just a few of the many available to you.
 A (mostly) complete list follows:
 \begin{leftfigure}
 \lm
-\begin{tabular}{l|l|l}
+\begin{tabularx}{0.9\textwidth}{l|l|l}
 {\normalfont Command} & {\normalfont Alternative} & {\normalfont Style} \\
 \hline
 \verb|\textnormal{...}| & \verb|{\normalfont ...}| & the default \\
@@ -48,7 +48,7 @@ A (mostly) complete list follows:
 \verb|\textsl{...}| & \verb|{\slshape ...}| & {\fontspec{Latin Modern Roman Slanted}slanted, or oblique type} \\
 \verb|\textsc{...}| & \verb|{\scshape ...}| & \textsc{Small Capitals} \\
 \verb|\textbf{...}| & \verb|{\bfseries ...}| & \textbf{boldface} \\
-\end{tabular}
+\end{tabularx}
 \end{leftfigure}
 The first form (which takes the text to format as an argument)
 should usually be preferred over the second
