Hello: Use "strange" less often.

--- a/hello.tex
+++ b/hello.tex
@@ -149,12 +149,12 @@ Know that these commands consume any space that follows them.
 For example,
 \begin{leftfigure}
 \begin{lstlisting}
-\LaTeX is great, but it can be strange sometimes.
+\LaTeX is great, but it can be a bit odd sometimes.
 \end{lstlisting}
 \end{leftfigure}
 will give you
 \begin{leftfigure}
-\lm \LaTeX is great, but it can be strange sometimes.
+\lm \LaTeX is great, but it can be a bit odd sometimes.
 \end{leftfigure}
 You can fix this by adding an empty pair of braces to the command.
 Of course, the braces aren't needed if there is no space to preserve:
